--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,25 +4,29 @@ on:
   push:
     branches: [ master, main ]
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
       
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Setup Pages
         uses: actions/configure-pages@v3
-      
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+
+      - name: Upload artifact to GitHub Pages
+        uses: actions/upload-pages-artifact@v2
         with:
           path: '.'
-      
+
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v2
